<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ff00"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="NAME: PRATIK PANCHANI"
            android:textColor="#000000"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/total_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="60dp"
            android:text="TOTAL MARKS:0"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="QUESTION COMPLETED: "
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/questions_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/question_completed"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30dp" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#ff00ff"
        android:padding="24dp"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="#0000ff"
            android:text="@string/true_button"
            android:textColor="#ffffff"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000ff"
            android:text="@string/false_button"
            android:textColor="#ffffff"
            android:textSize="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="#0000ff"
            android:text="@string/hint_button"
            android:textColor="#ffffff"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000ff"
            android:text="@string/cheat_button"
            android:textColor="#ffffff"
            android:textSize="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="#0000ff"
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="4dp"
            android:text="@string/prev_button"
            android:textColor="#ffffff"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000ff"
            android:drawablePadding="4dp"
            android:drawableRight="@drawable/arrow_right"
            android:text="@string/next_button"
            android:textColor="#ffffff"
            android:textSize="25dp"/>

    </LinearLayout>

</LinearLayout>
